# epic-rpg-discord-helper

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  build.sh  load_history.py  manage.py  pyproject.toml  reminder_bot.py  requirements.txt
.assets/: README.md
epic/: admin.py  apps.py  cmd_chain.py  crafting  inventory.py  managers.py  mixins.py  models.py  query.py  scrape.py  utils.py
epic/cmd/: __init__.py  cmd.py  registry.py
epic/handlers/: base.py  rcd.py  rpg.py
epic/history/: load_history.py  scrape.py
epic/management/commands/: next_join_code.py  parse_hunts.py
epic/migrations/: 0001_initial.py  0002_cooldown_profile_server.py  0003_auto_20201122_0032.py  0004_profile_timezone.py  0005_guild_cooldowns.py  0006_timeformat.py  0007_group_guild_cd.py  0008_gamble.py  0009_gamble_created.py  0010_hunt.py  0011_groupactivity_invite.py  0012_event_cooldowns.py  0013_profile_cooldown_multiplier.py  0014_marriage.py  0015_adjust_gamble_created.py  0016_channel.py  0017_pet_cd.py  0018_sentinel.py  0019_farm.py  0020_bans.py  0021_event_multipliers.py  0022_area.py
epic/tests/: test_events.py  test_group_activity.py  util.py
epic/tests/fixtures/events/: not_so_mini_boss.json
epic/tests/fixtures/group_activities/: arena.json  confirm_arena.json  confirm_duel.json  duel.json  horse.json  initiate_arena.json  initiate_duel.json
epic/types/: __init__.py  aliases.py  classes.py
epic_reminder/: asgi.py  settings.py  urls.py  utils.py  wsgi.py
materials/: .gitignore  Cargo.toml  Dockerfile  README.md  requirements.txt  setup.py
materials/crafting/: __init__.py  models.py  recipes.py
materials/scripts/: create_wheel.sh  docker_wheel.sh
materials/src/: crafting.rs  external.rs  lib.rs  tests.rs  utils.rs
materials/tests/: materials_test.py
