[tool.poetry]
name = "epic_reminder"
version = "0.1.0"
description = "Reminds when you should do stuff in Epic RPG"
authors = ["John-Paul Jorissen <jjorissen52@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
"discord.py" = "^1.5.1"
Django = "^3.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
