[tool.poetry]
name = "epic_reminder"
version = "0.1.0"
description = "Reminds when you should do stuff in Epic RPG"
authors = ["John-Paul Jorissen <jjorissen52@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
"discord.py" = "^1.5.1"
Django = "^3.1.3"
django-env-settings = {git = "https://github.com/jjorissen52/django-env-settings.git"}
python-dotenv = "^0.15.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.8.2"
black = "^20.8b1"

[tool.black]
line-length=120
exclude = """
/(
    ^migrations/
)/
"""

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
